--- a/client/src/Blog.css
+++ b/client/src/Blog.css
@@ -10,7 +10,7 @@
     
 }
 .inside-div{
-    padding: 30px 20px;
+    padding: 30px 50px;
     display: flex;
     /* margin: 100px auto; */
     margin:0px 100px;
@@ -34,11 +34,55 @@
 .inside-div p{
     text-align: justify;
 }
-@media (max-width:750px){
+
+.form-div{
+    margin: auto;
+    width: 700px;
+    position: relative;
+    bottom: 10px;
+    /* display: flex;
+    flex-direction: column; */
+    margin-top: 0%;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    box-shadow:3px 3px 10px rgb(0 0 0 / 10%),
+    -3px -3px 10px rgb(0 0 0 / 10%) ;
+}
+input,textarea{
+    margin: 20px 0px 20px 20px;
+    padding: 10px;
+border: solid 1px #0000003e;
+font-family: 'Roboto',sans-serif;
+width: calc(100% - 100px);
+resize: vertical ;
+}
+.btn{
+    margin: 0px 0px 20px 20px;
+    padding: 10px 20px;
+    background-color: #009bff;
+    border: solid 1px #009bff;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.btn:hover{
+    background-color:#0086d8;
+}
+@media (max-width:760px){
     .inside-div{
     margin:0px 20px;
+    padding: 30px 20px;
     }
     .inside-div img{
-        width: 200px;
+        width: 400px;
+    }
+    .form-div{
+        width: auto;
     }
 }
+@media (max-width:560px){
+    .inside-div img{
+        width: 200px;
+    }}
